# Find Qt5Core and Qt5Widgets
#find_package(Qt5Core REQUIRED)
#find_package(Qt5Widgets REQUIRED)

## For finding Qt includes
#include_directories(${CMAKE_CURRENT_SOURCE_DIR})
#include_directories(${Qt5Widgets_INCLUDE_DIRS})
#include_directories(${Qt5Core_INCLUDE_DIRS})

#aux_source_directory(. DIR_EXHAUSTION_SRCS)
#add_library(exhaustion ${DIR_EXHAUSTION_SRCS})
